buildscript {
	repositories {
		maven {
			url = "https://maven.minecraftforge.net"
		}
		mavenCentral()
	}
	
	dependencies {
		classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
		classpath "org.spongepowered:mixingradle:0.7.+"
	}
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "eclipse"
apply plugin: "maven-publish"
apply plugin: "org.spongepowered.mixin"

version = "1.19.3-2.1"
group = "net.luis.xsurvive"
archivesBaseName = "XSurvive"
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println("Java: " + System.getProperty("java.version") + " JVM: " + System.getProperty("java.vm.version") + "(" + System.getProperty("java.vendor") + ") Arch: " + System.getProperty("os.arch"))

minecraft {
	mappings channel: "official", version: "1.19.3"
	
	accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
	
	runs {
		client {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			property "forge.enabledGameTestNamespaces", "xsurvive"
			property "mixin.env.remapRefMap", "true"
			property "mixin.env.refMapRemappingFile", "${buildDir}/createSrgToMcp/output.srg"
			
			mods {
				examplemod {
					source sourceSets.main
				}
			}
		}
		
		serverClient {
			parent runs.client
			
			args "--username", "Dev2"
		}
		
		server {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			property "forge.enabledGameTestNamespaces", "xsurvive"
			property "mixin.env.remapRefMap", "true"
			property "mixin.env.refMapRemappingFile", "${buildDir}/createSrgToMcp/output.srg"
			property "forge.logging.mojang.level", "debug"
			
			mods {
				examplemod {
					source sourceSets.main
				}
			}
		}
		
		gameTestServer {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			property "forge.enabledGameTestNamespaces", "xsurvive"
			property "mixin.env.remapRefMap", "true"
			property "mixin.env.refMapRemappingFile", "${buildDir}/createSrgToMcp/output.srg"
			
			mods {
				examplemod {
					source sourceSets.main
				}
			}
		}
		
		data {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			property "forge.enabledGameTestNamespaces", "xsurvive"
			property "mixin.env.remapRefMap", "true"
			property "mixin.env.refMapRemappingFile", "${buildDir}/createSrgToMcp/output.srg"
			
			args "--mod", "xsurvive", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources/")
			
			mods {
				examplemod {
					source sourceSets.main
				}
			}
		}
	}
}

mixin {
	add sourceSets.main, "mixins.xsurvive.refmap.json"
	config "xsurvive.mixins.json"
	debug.export = true
}

sourceSets.main.resources { srcDir "src/generated/resources" }

repositories {
	maven {
		name = "Progwml6 maven"
		url = "https://dvs1.progwml6.com/files/maven/"
	}
	maven {
		name = "ModMaven"
		url = "https://modmaven.dev"
	}
	maven {
		url "https://cursemaven.com"
	}
	maven  {
		url uri("${projectDir}/maven/repositories")
	}
}

dependencies {
	minecraft "net.minecraftforge:forge:1.19.3-44.1.8"
	
	annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
	
	implementation /*compileOnly*/ fg.deobf("net.luis.xbackpack:Forge-XBackpack:1.19.3-3.2")
	implementation fg.deobf("net.luis.xores:Forge-XOres:1.19.3-2.4")

	compileOnly fg.deobf("mezz.jei:jei-1.19.3-common-api:12.1.1.13")
	compileOnly fg.deobf("mezz.jei:jei-1.19.3-forge-api:12.1.1.13")
	runtimeOnly fg.deobf("mezz.jei:jei-1.19.3-forge:12.1.1.13")
}

jar {
	manifest {
		attributes([
			"Specification-Title"     : "XSurvive",
			"Specification-Version"   : "1.19.3-2.1",
			"Implementation-Title"    : project.name,
			"Implementation-Timestamp": new Date().format("yyyy-MM-dd HH:mm:ssZ")
		])
	}
}

jar.finalizedBy("reobfJar")

java {
	withSourcesJar()
}

artifacts {
	archives sourcesJar
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			artifact jar
			artifact sourcesJar
		}
	}
	
	repositories {
		maven {
			url uri("C:/Users/luiss/.m2/repository")
		}
		maven {
			url uri("${projectDir}/maven/repositories")
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
}
